syntax = "proto3";

package musicclub.event;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "song.proto";
import "user.proto";
import "permissions.proto";

// Provides CRUD functionality for events and tracklists.
service EventService {
  // Returns unpaginated list of events.
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);
  // Returns a single event with full details and tracklist.
  rpc GetEvent(EventId) returns (EventDetails);
  // Create events (requires permissions).
  rpc CreateEvent(CreateEventRequest) returns (EventDetails);
  // Update events (requires permissions).
  rpc UpdateEvent(UpdateEventRequest) returns (EventDetails);
  // Delete events (requires permissions).
  rpc DeleteEvent(EventId) returns (google.protobuf.Empty);

  // Replace the entire tracklist in one call.
  rpc SetTracklist(SetTracklistRequest) returns (EventDetails);
}

message EventId {
  string id = 1;
}

message ListEventsRequest {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
  uint32 limit = 3;
}

message ListEventsResponse {
  repeated Event events = 1;
}

message Event {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_at = 3;
  string location = 4;

  // Notification preferences for reminders.
  bool notify_day_before = 5;
  bool notify_hour_before = 6;
}

message EventDetails {
  Event event = 1;
  Tracklist tracklist = 2;
  repeated musicclub.song.RoleAssignment participants = 3;
  musicclub.permissions.PermissionSet permissions = 4;
}

message Tracklist {
  repeated TrackItem items = 1;
}

message TrackItem {
  uint32 order = 1;

  // Reference to a song in the catalog.
  string song_id = 2;

  // If song is not in catalog, allow a custom title/artist.
  string custom_title = 3;
  string custom_artist = 4;
}

message CreateEventRequest {
  string title = 1;
  google.protobuf.Timestamp start_at = 2;
  string location = 3;
  bool notify_day_before = 4;
  bool notify_hour_before = 5;
  Tracklist tracklist = 6;
}

message UpdateEventRequest {
  string id = 1;
  string title = 2;
  google.protobuf.Timestamp start_at = 3;
  string location = 4;
  bool notify_day_before = 5;
  bool notify_hour_before = 6;
}

message SetTracklistRequest {
  string event_id = 1;
  Tracklist tracklist = 2;
}
